@@ -26,8 +26,8 @@
  * @summary Test virtual threads using a custom scheduler
  * @requires vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} CustomScheduler.java
- * @run testng/othervm --enable-preview CustomScheduler
+ * @enablePreview
+ * @run testng CustomScheduler
  */
 
 import java.lang.reflect.Field;
